--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -3,7 +3,9 @@
     vertical-align: middle;
     margin-right: 1rem;
   }
+  text-align: center;
 }
+
 .logo {
   text-align: center;
   padding: 2rem 1rem;
