--- a/src/app/pages/admin/productos/editar-producto/editar-producto.component.html
+++ b/src/app/pages/admin/productos/editar-producto/editar-producto.component.html
@@ -4,9 +4,8 @@
   </mat-toolbar>
 
   <form class="sombra" [formGroup]="formActualizarProducto">
-    <mat-card>
-      <mat-card-content>
-        <div class="imagenPrevia">
+    <div class="imagen-producto">
+      <div class="imagenPrevia">
         <div *ngIf="!imagenPrevia">
           <img src="{{ producto.imagenProducto }}" />
         </div>
@@ -15,11 +14,11 @@
             <img width="100px" [src]="imagenPrevia" alt="" />
           </div>
         </div>
-        <div class="botonSelectImage">
-        <label for="uid" >Elija una imagen</label>
-      </div>
+        <button mat-raised-button color="primary">
+          <label for="uid">Elija una imagen</label>
+        </button>
         <input
-        style="display: none"
+          style="display: none"
           type="file"
           id="uid"
           formControlName="uid"
@@ -27,186 +26,219 @@
           (change)="onFileChange($event)"
         />
       </div>
-        <mat-form-field appearance="fill">
-          <mat-label>Producto</mat-label>
-          <input
-            matInput
-            value="{{ producto.nombreProducto }}"
-            formControlName="nombre"
-            autocomplete="off"
-          />
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Capacidad</mat-label>
-          <input
-            matInput
-            value="{{ producto.kilosProducto }}"
-            formControlName="kilos"
-            autocomplete="off"
-          />
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Stock</mat-label>
-          <input
-            matInput
-            value="{{ producto.unidadesProducto }}"
-            formControlName="unidades"
-            autocomplete="off"
-          />
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Precio de venta</mat-label>
+    </div>
+    <div class="detalle-producto">
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Producto</mat-label>
+              <input
+                matInput
+                value="{{ producto.nombreProducto }}"
+                formControlName="nombre"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Capacidad</mat-label>
+              <input
+                matInput
+                value="{{ producto.kilosProducto }}"
+                formControlName="kilos"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Stock</mat-label>
+              <input
+                matInput
+                value="{{ producto.unidadesProducto }}"
+                formControlName="unidades"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Precio de venta</mat-label>
 
-          <input
-            matInput
-            value="$ {{ producto.precioVenta }}"
-            formControlName="precioVenta"
-            autocomplete="off"
-          />
-        </mat-form-field>
+              <input
+                matInput
+                value="$ {{ producto.precioVenta }}"
+                formControlName="precioVenta"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Precio de costo</mat-label>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Precio de costo</mat-label>
+              <input
+                matInput
+                value="$ {{ producto.precioCosto }}"
+                formControlName="precioCosto"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Numero de serie</mat-label>
 
-          <input
-            matInput
-            value="$ {{ producto.precioCosto }}"
-            formControlName="precioCosto"
-            autocomplete="off"
-          />
-        </mat-form-field>
+              <input
+                matInput
+                value="{{ producto.numeroSerie }}"
+                formControlName="numeroSerie"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="outline">
+              <mat-label>Agente extintor</mat-label>
+              <mat-select
+                value="{{ producto.categoriaProducto }}"
+                formControlName="idCategoria"
+              >
+                <div *ngFor="let categoriaProd of arrayCatProductos">
+                  <mat-option [value]="categoriaProd.id">
+                    {{ categoriaProd.agExtintor }}
+                  </mat-option>
+                </div>
+              </mat-select>
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Clase</mat-label>
+              <input
+                disabled="true"
+                style="color: aliceblue"
+                matInput
+                value="{{ producto.claseProducto }}"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="outline">
+              <mat-label>Aplicativos</mat-label>
+              <textarea
+                disabled="true"
+                style="color: aliceblue"
+                matInput
+                value="{{ producto.aplicativos }}"
+                autocomplete="off"
+              ></textarea>
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Fuegos</mat-label>
+              <textarea
+                disabled="true"
+                style="color: aliceblue"
+                matInput
+                value="{{ producto.fuegos }}"
+                autocomplete="off"
+              ></textarea>
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Descripcion</mat-label>
+              <textarea
+                matInput
+                value="{{ producto.descripcion }}"
+                autocomplete="off"
+              ></textarea>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Numero de serie</mat-label>
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="outline">
+              <mat-label>Proveedor</mat-label>
+              <mat-select
+                value="{{ proveedor.nombreFantasia }}"
+                formControlName="idProveedor"
+              >
+                <div *ngFor="let proveedor of arrayProveedores">
+                  <mat-option [value]="proveedor.id">{{
+                    proveedor.nombreFantasia
+                  }}</mat-option>
+                </div>
+              </mat-select>
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Contacto</mat-label>
+              <input
+                disabled="true"
+                style="color: aliceblue"
+                matInput
+                value="{{ producto.contactoProv }}"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Telefono</mat-label>
+              <input
+                matInput
+                value="{{ producto.telefonoProv }}"
+                autocomplete="off"
+              />
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
 
-          <input
-            matInput
-            value="{{ producto.numeroSerie }}"
-            formControlName="numeroSerie"
-            autocomplete="off"
-          />
-        </mat-form-field>
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="fill">
+              <mat-label>Observaciones del producto</mat-label>
+              <textarea
+                matInput
+                value="{{ producto.observacionesProd }}"
+                autocomplete="off"
+                formControlName="observacionesProd"
+              ></textarea>
+            </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Agente extintor</mat-label>
-          <mat-select
-            value="{{ producto.categoriaProducto }}"
-            formControlName="idCategoria"
-          >
-            <div *ngFor="let categoriaProd of arrayCatProductos">
-              <mat-option [value]="categoriaProd.id">
-                {{ categoriaProd.agExtintor }}
-              </mat-option>
-            </div>
-          </mat-select>
-        </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Observaciones del proveedor</mat-label>
+              <textarea
+                matInput
+                value="{{ producto.observacionesProv }}"
+                autocomplete="off"
+              ></textarea>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Aplicativos</mat-label>
-          <textarea
-            disabled="true"
-            style="color: aliceblue"
-            matInput
-            value="{{ producto.aplicativos }}"
-            autocomplete="off"
-          ></textarea>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Fuegos</mat-label>
-          <textarea
-            disabled="true"
-            style="color: aliceblue"
-            matInput
-            value="{{ producto.fuegos }}"
-            autocomplete="off"
-          ></textarea>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Descripcion</mat-label>
-          <textarea
-            matInput
-            value="{{ producto.descripcion }}"
-            autocomplete="off"
-          ></textarea>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Clase</mat-label>
-          <input
-            disabled="true"
-            style="color: aliceblue"
-            matInput
-            value="{{ producto.claseProducto }}"
-            autocomplete="off"
-          />
-        </mat-form-field>
-
-        <mat-form-field>
-          <mat-label>Proveedor</mat-label>
-          <mat-select
-            value="{{ producto.nombreFantasia }}"
-            formControlName="idProveedor"
-          >
-            <div *ngFor="let proveedor of arrayProveedores">
-              <mat-option [value]="proveedor.id">{{
-                proveedor.nombreFantasia
-              }}</mat-option>
-            </div>
-          </mat-select>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Contacto</mat-label>
-          <input
-            disabled="true"
-            style="color: aliceblue"
-            matInput
-            value="{{ producto.contactoProv }}"
-            autocomplete="off"
-          />
-        </mat-form-field>
-
-        <mat-form-field appearance="fill" style="display: none">
-          <mat-label>idCloudinary</mat-label>
-          <input
-            formControlName="borrarImagenAnterior"
-            matInput
-            value="{{ producto.idCloudinary }}"
-            autocomplete="off"
-          />
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Telefono</mat-label>
-          <input
-            matInput
-            value="{{ producto.telefonoProv }}"
-            autocomplete="off"
-          />
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Observaciones del producto</mat-label>
-          <textarea
-            matInput
-            value="{{ producto.observacionesProd }}"
-            autocomplete="off"
-            formControlName="observacionesProd"
-          ></textarea>
-        </mat-form-field>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Observaciones del proveedor</mat-label>
-          <textarea
-            matInput
-            value="{{ producto.observacionesProv }}"
-            autocomplete="off"
-          ></textarea>
-        </mat-form-field>
-      </mat-card-content>
-      <mat-card-actions>
+      <table>
         <button
           mat-raised-button
           color="primary"
@@ -214,7 +246,17 @@
         >
           Actualizar
         </button>
-      </mat-card-actions>
-    </mat-card>
+      </table>
+
+      <mat-form-field appearance="standard" style="display: none">
+        <mat-label>idCloudinary</mat-label>
+        <input
+          formControlName="borrarImagenAnterior"
+          matInput
+          value="{{ producto.idCloudinary }}"
+          autocomplete="off"
+        />
+      </mat-form-field>
+    </div>
   </form>
 </div>
