--- a/src/app/pages/admin/productos/editar-producto/editar-producto.component.html
+++ b/src/app/pages/admin/productos/editar-producto/editar-producto.component.html
@@ -243,6 +243,7 @@
           mat-raised-button
           color="primary"
           (click)="actualizarProducto()"
+          [disabled]="!formActualizarProducto.valid"
         >
           Actualizar
         </button>
