--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,31 +6,31 @@
 
     <span
       ><a routerLink="/"
-        ><img src="../../../assets/images/favicon-32x32.png" alt="Ecofer" /></a>
+        ><img src="../../../assets/images/favicon-32x32.png" alt="Ecofer"
+      /></a>
     </span>
 
     <span class="enviar_derecha"></span>
+    <!-- <a *ngIf="(this.authService.checkLocalStorage() || usuarioGoogle)"mat-button > -->
+    <a *ngIf="usuarioGoogle | async as user" mat-button routerLinkActive="active"
+      ><mat-icon>shopping_cart</mat-icon></a
+    ><!--carrito de compras-->
     <a
-    *ngIf="(this.authService.checkLocalStorage() || usuarioGoogle)"
-
-      mat-button >
-      <mat-icon>shopping_cart</mat-icon></a><!--carrito de compras-->
-    <a
-    *ngIf="!(this.authService.checkLocalStorage() && usuarioGoogle)"
+      *ngIf="!(this.authService.checkLocalStorage() && this.usuarioGoogle)"
       mat-button
       routerLink="login"
       routerLinkActive="active"
       ><mat-icon>perm_identity</mat-icon>Ingresar</a
     >
     <a
-    *ngIf="!(this.authService.checkLocalStorage() && usuarioGoogle)"
+      *ngIf="!(this.authService.checkLocalStorage() && this.usuarioGoogle)"
       mat-button
       routerLink="registro"
       routerLinkActive="active"
       ><mat-icon>add_circle</mat-icon>Registrate</a
     >
     <a
-    *ngIf="(this.authService.checkLocalStorage() || usuarioGoogle)"
+      *ngIf="this.authService.checkLocalStorage() || this.usuarioGoogle"
       mat-button
       (click)="logout()"
       routerLinkActive="active"
