--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -10,7 +10,7 @@
 
   <div *ngIf="usuarioGoogle | async as user">
     <div class="logo">
-      <img [src]="user.photoURL" />
+      <img  [src]='user.photoURL' />
     </div>
     <b>{{ user.displayName }}</b>
 
