--- a/src/app/pages/admin/productos/editar-producto/editar-producto.component.css
+++ b/src/app/pages/admin/productos/editar-producto/editar-producto.component.css
@@ -23,6 +23,10 @@
   justify-content: center;
   align-items: center;
 }
+.inputCategoriaProd{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 form {
   width: 95%;
   margin: 5% auto;
