--- a/src/app/pages/listar-productos/listar-productos.component.css
+++ b/src/app/pages/listar-productos/listar-productos.component.css
@@ -1,17 +1,14 @@
 .fondoBody {
-  /* line-height: 1.6; */
-  font-family: "Playfair Display", serif;
+  font-family: "Roboto";
   padding: 2rem;
-  /* width: 100%;
-  height: 100%; */
   display: grid;
   grid-template-columns: 10% 90%;
-
   gap: 1rem;
   overflow: hidden;
 }
 
-.checkboxCategorias,h4 {
+.checkboxCategorias,
+h4 {
   color: azure;
   margin: 12px 0;
 }
@@ -23,7 +20,7 @@
 
 span {
   font-size: 20px;
-  font-weight:normal;
+  font-weight: normal;
 }
 
 mat-card-actions {
@@ -53,8 +50,7 @@ mat-card-content p {
 .seleccionar-productos {
   /* background: #424242; */
   margin-left: 0 auto;
-  color:azure;
-
+  color: azure;
 }
 
 mat-card img {
@@ -72,10 +68,24 @@ mat-card img {
   background-size: cover;
 }
 
-/* .mat-drawer-content {
-  position: relative;
-  z-index: 1;
-  display: block;
-  height: 100%;
-  overflow:auto;
+.filtros {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+/* .filtros input[type="radio"] {
+  display: none;
 } */
+
+.filtros label {
+  color: rgb(241, 88, 12);
+  margin: 5px;
+  background: rgba(230, 10, 10, 0.1);
+  padding: 5px 5px;
+  display: inline-block;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+
