filtros ok ,salvo por lo del admin/categiras

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,8 @@ mat-sidenav {
   background-color: rgb(112, 6, 6);
 }
 mat-sidenav-container {
+  color: #666;
+  font-family: Proxima Nova,-apple-system,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
   background-color: #181818;
 min-height:88vh;
 }
